# ContextGuard-Codex

./: AGENTS.md  README.md  changy.md
contextguard/: CHANGELOG.md  README.md  changy.md  pyproject.toml
contextguard/.codex-plugin/: plugin.json
contextguard/benchmarks/: README.md  evidence_packet_ab.py  install_acceptance.py  output_ab.py  output_routing_ab.py  real_codex_ab.py  real_codex_ci_ab.py  real_codex_inspect_ab.py  real_codex_support_ab.py
contextguard/contextguard/: adaptive_capture.py  budget_enforcer.py  cli.py  codex_usage.py  command_classifier.py  command_rewriter.py  context_brief.py  context_capsule.py  cross_session.py  doc_families.py  evidence_expand.py  family_codec.py  history_pack.py  host_adapter.py  host_policy.py  ledger.py  lifetime_savings.py  metrics.py  model_router.py  optimization_advisor.py  output_capture.py  output_compactor.py  output_policy.py  output_retrieval.py  project_context.py  project_runner.py  quota_proxy.py  repo_ranker.py  risk_assessment.py  session_cost.py  session_gate.py  session_state.py  snapshot_store.py  source_inspector.py  summarize_jsonl.py  summarize_log.py  surface_brief.py  task_classifier.py  task_evidence.py
contextguard/hooks/: post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_start.py  user_prompt_submit.py
contextguard/scripts/: build_marketplace_release.py  generate_benchmark_report_pdf.py  install_local_codex.py
contextguard/tests/: test_adaptive_capture.py  test_budget_enforcer.py  test_cli.py  test_cli_flows.py  test_codex_usage.py  test_hooks.py  (+36 more)
(+38 files in other folders)
