[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contextguard"
version = "0.5.1"
description = "Local-first Codex context and output optimization plugin."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Giminger Consulting"}]
dependencies = []

[project.scripts]
contextguard = "contextguard.cli:main"

[tool.setuptools.packages.find]
include = ["contextguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
